<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C3 Team Chooser</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Register</string>
    <string name="title_section2">Make Teams</string>
    <string name="title_section3">Settings</string>
    <string name="submit">Submit</string>
    <string name="make_teams">Make Teams</string>
    <string name="welcome_message">Welcome to C3!</string>
    <string name="scan_text">Scan Bruincard</string>
    <string name="manual_uid_text">Enter UID</string>
    <string name="sign_in_text">Please sign in / register here:</string>
    <string name="view_file_contents">View File Contents</string>
    <string name="view_ids_signed_in">View UIDs Signed In</string>
    <string name="clear_signed_in">Clear UIDs Signed In</string>
    <string name="query_results">Query Results:</string>
    <string name="clear_csv">Clear people.csv</string>
    <string name="app_settings">Application Settings</string>
    <string name="person1">Person 1 Full Name</string>
    <string name="person2">Person 2 Full Name</string>
    <string name="preferences">Team Preferences:</string>
    <string name="preference1">Person 1 Preference Full Name</string>
    <string name="preference2">Person 2 Preference Full Name</string>
    <string name="unsure">If you aren\'t sure, choose your year.</string>
    <string name="rate">Rate your Experience</string>
    <string name="click_it">Just Click It!</string>
    <string name="clear_all">Clear All</string>

</resources>
