<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome to C3!"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:hint="Enter Name..."
        android:id="@+id/nameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Enter Email..."
        android:id="@+id/emailField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Enter/Check your UID"
        android:id="@+id/uid"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/uidField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rate"
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/experience">

        <RadioButton
            android:id="@+id/eOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"/>

        <RadioButton
            android:id="@+id/eTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"/>

        <RadioButton
            android:id="@+id/eThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"/>

        <RadioButton
            android:id="@+id/eFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"/>

        <RadioButton
            android:id="@+id/eFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"/>
    </RadioGroup>

    <TextView
        android:text="@string/unsure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/submit"
            android:id="@+id/submitPerson"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

</LinearLayout>
